iOS about to builddddd

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,9 @@ jobs:
           - name: macOS
             os: macos-latest
 
-          # - name: iOS
-          #   os: macos-latest
-          #   target: iOS
+          - name: iOS
+            os: macos-latest
+            target: iOS
 
           - name: Android32
             os: ubuntu-latest
